# amazon-deforestation-atlas

./: README.md  pyproject.toml
data/sample/: sample.csv
notebooks/: 01_exploracao.ipynb
scripts/: download_data.py
src/: main.py
