[project]
name = "amazon-deforestation-atlas"
version = "0.1.0"
description = "Visualization lab for Amazon deforestation time series, comparisons, and correlation heatmaps."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
